--- a/team.html
+++ b/team.html
@@ -230,10 +230,10 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-primary" href="#">Your Site Name</a>. All Rights Reserved.</p>
+                    <p class="mb-md-0">&copy; <a class="text-primary" href="#">ST MARKS</a>. All Rights Reserved.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="mb-0">Designed by <a class="text-primary" href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p class="mb-0">Designed by <a class="text-primary" href="https://raralwavessolutions.co.ke/">Raralwaves Solutions</a></p>
                 </div>
             </div>
         </div>
@@ -261,3 +261,4 @@
 
 
 </html>
+
